# aiengineering-bootcamp

./: .env  Dockerfile  docker-compose.yml  pyproject.toml
apps/api/: Dockerfile
apps/api/src/api/: app.py
apps/chatbot_ui/: Dockerfile  pyproject.toml
apps/chatbot_ui/src/: app.py
apps/chatbot_ui/src/chatbot_ui/: app.py
apps/chatbot_ui/src/chatbot_ui/core/: config.py
apps/chatbot_ui/tests/: test_config.py
apps/core/: config.py
notebooks/prerequisites/: 01-llm-apis.ipynb
notebooks/prerequisites/.ipynb_checkpoints/: 01-llm-apis-checkpoint.ipynb
src/: app.py
src/core/: config.py
