[project]
name = "chatbot_ui"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Murali C", email = "chvmurali@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "streamlit>=1.58.0",
    "fastapi>=0.128.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
shared = {workspace=true}

[tool.hatch.build.targets.wheel]
packages = ["src/api", "src/chatbot_ui"]

[tool.hatch.build.targets.sdist]
include = [
    "src/",
    "tests/",
    "READMME.md"
]
